tests/ui/closures/2229_closure_analysis/diagnostics/cant-mutate-imm.stderr
error[E0594]: cannot assign to `z.0.0.0`, as it is not declared as mutable
  --> $DIR/cant-mutate-imm.rs:12:9
   |
LL |     let z = (y, 10);
   |         - help: consider changing this to be mutable: `mut z`
...
LL |         z.0.0.0 = 20;
   |         ^^^^^^^^^^^^ cannot assign

error[E0594]: cannot assign to `*bx.0`, as it is not declared as mutable
  --> $DIR/cant-mutate-imm.rs:24:9
   |
LL |     let bx = Box::new(x);
   |         -- help: consider changing this to be mutable: `mut bx`
...
LL |         bx.0 = 20;
   |         ^^^^^^^^^ cannot assign

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0594`.
